--- a/portifolioWebSite/style.css
+++ b/portifolioWebSite/style.css
@@ -18,7 +18,7 @@
     /* background-color: #00804b; */
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
-    /* z-index: 999; */
+    z-index: 999;
     transition: all 0.3s ease;
 }
 .navbar.sticky{  /*classe que adicionar cor ao navbar qdo barra de rolagem desce - funcao no script.js*/
@@ -55,9 +55,11 @@
 }
 .navbar .menu li a:hover{
     color: #00804b;
+    /* color:gray; */
 }
 .navbar.sticky .menu li a:hover{/*hover usado no menu qdo barra desce*/
-    color: #00804b;
+    /* color: #00804b; */
+    color:#fff;
 }
 
 /*! home - inicio */
@@ -119,6 +121,12 @@ section{
 .about{
     font-family: 'Roboto', sans-serif;
 }
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between; /* espaco entre os cards de sobre */
+}
 .about .title{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
@@ -129,10 +137,40 @@ section{
     position: relative;
     color: #00804b;
 }
+.about .title::before{ /* traco abaixo do SOBRE*/
+    content: "";
+    position: absolute;
+    bottom: 0; /*coloca traco abaixo do SOBRE*/
+    left: 50%; /* CENTRALIZA O TRACO*/
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translate(-50%); /* CENTRALIZA O TRACO*/
+}
+.about .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
+    content: "Quem sou eu";
+    position: absolute;
+    bottom: -12px; /* listra do lado do Quem sou eu */
+    left: 50%; /* CENTRALIZA O TRACO na horizontal */
+    /* width: 180px;
+    height: 3px; */
+    font-size: 20px;
+    background: #fff;
+    color: #00804b;
+    padding: 5px;
+    transform: translate(-50%); /* CENTRALIZA O TRACO*/
+}
+.about .about-content .column-left{ /* ajusta o conteudo do card */
+    width: 45%;
+}
+.about .about-content .column-right{ /* ajusta o conteudo do card */
+    width: 55%;
+}
 .about .about-content .column-left img{
     width: 400px;
     height: 400px;
     object-fit: cover;
+    border-radius: 6px;
 }
 
 /*todo responsivo */
@@ -150,12 +188,12 @@ section{
     .max-width{
         padding: 0 50px;
     }
-    .menu-btn{
+    .menu-btn{ /* icone hamburg*/
         display: block;
         z-index: 999;
     }
-    .menu-btn:hover{
-        color: #00804b;
+    .menu-btn:hover{ /* icone hamburg hover*/
+        color: #fff;
     }
     .navbar .menu{ /*oculta o menu, deixando so o menu-hamburd*/
         position: fixed;
