--- a/portifolioWebSite/style.css
+++ b/portifolioWebSite/style.css
@@ -126,7 +126,7 @@ section .title{
     margin-bottom: 60px;
     padding-bottom: 20px;
     position: relative;
-    color: #00804b;
+    /* color: #00804b; */
 }
 /* .about .title::before{ traco abaixo do SOBRE */
 section .title::before{ /* traco abaixo do SOBRE*/
@@ -137,7 +137,7 @@ section .title::before{ /* traco abaixo do SOBRE*/
     width: 180px;
     height: 3px;
     background: #111;
-    transform: translate(-50%); /* CENTRALIZA O TRACO*/
+    transform: translateX(-50%); /* CENTRALIZA O TRACO*/
 }
 section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     /* content: "Quem sou eu"; */
@@ -150,14 +150,14 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     background: #fff;
     color: #00804b;
     padding: 5px;
-    transform: translate(-50%); /* CENTRALIZA O TRACO*/
+    transform: translateX(-50%); /* CENTRALIZA O TRACO*/
 }
 
 /*? -- session - sobre -- */
 .about, .services{
     font-family: 'Roboto', sans-serif;
 }
-.about .about-content
+.about .about-content,
 .services .serv-content{
     display: flex;
     flex-wrap: wrap;
@@ -188,7 +188,8 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
 }
 .about .about-content .right a{ /* tag a do download do CV */
     display: inline-block;
-    background-color: #00804b;
+    /* background-color: #00804b; */
+    background: #00804b;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -216,8 +217,42 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     background: #111;
     color: #fff;
 }
-.services .title::after{
+.services .title::before{ /* traco branco atras do "Que oferecemos"*/
+    background: #fff;
+}
+.services .title::after{ /* fundo preto do "Que oferecemos */
+    background: #111;
     content: "Que ofereçemos";
+}
+.services .serv-content .card{ 
+    width: calc(33% - 20px); /* divide a horizontal em 3 */
+    background: #222; /* fundo cinza */
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover{ /* muda a cor do card qdo passa o mouse sobre*/
+     background: #00804b;
+}
+.services .serv-content .card .box{ /* suaviza o movimento qdo passa o mouse por cima*/
+    transition: all 0.3s ease;
+}
+.services .serv-content .card:hover .box{ /* aplica efeito e salto mo texto qdo passa o mouse por cima */
+    transform: scale(1.05);
+}
+.services .serv-content .card ion-icon{ /* referente aos estilos dos icones*/
+    font-size: 70px;
+    color: #00804b;
+}
+.services .serv-content .card:hover ion-icon{ /* muda a cor do texto para branco qdo passa o mouse sobre*/
+    color: #fff;
+}
+.services .serv-content .card .text{ /* titulos dos cards*/
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
 }
 
 /*todo responsivo */
@@ -297,6 +332,10 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     .about .about-content .right{ /*centraliza a imagem do card e joga o texto para baixo, centralizado*/
         flex: 100%;
     }
+    .services .serv-content .card{ /* redimensiona os cards para tela menor*/
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
 }
 @media (max-width: 690px){
     .home .home-content .text-2{
@@ -307,6 +346,9 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     }
     .home .home-content a{
         font-size: 20px;
+    }
+    .services .serv-content .card{ /* redimensiona os cards para tela menor*/
+        width: 100%;
     }
 }
 @media (max-width: 500px){
