--- a/portifolioWebSite/style.css
+++ b/portifolioWebSite/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -66,7 +69,7 @@
 /*! --- HOME - inicio --- */
 .home{
     display: flex;
-    background: url(image/banner.png) no-repeat center;
+    background: url(image/banner.png) no-repeat;
     background-size: cover; /*adapta a img na tela*/
     height: 100vh;
     color: #fff;
@@ -109,13 +112,39 @@
 /*! --- HOME - fim --- */
 
 /** --- MENU MOBILE - inicio --- */
-.menu-btn{
+.menu-btn{ /* menu hamburger */
     color: #fff;
     font-size: 26px;
     cursor: pointer;
     display: none;
 }
 /** --- MENU MOBILE - fim --- */
+
+/** --- BTN SUBIR TELA - inicio --- */
+.scroll-up-btn{
+    position: fixed;
+    width: 42px;
+    height: 45px;
+    right: 30px;
+    bottom: 30px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
+    background: #00804b;
+    border-radius: 6px;
+    font-size: 30px;
+    z-index: 9999;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+.scroll-up-btn.show{ /* funcao da class .show esta no script.js */
+    opacity: 1;
+    pointer-events: auto;
+    bottom: 30px;
+}
+/** --- BTN SUBIR TELA - fim --- */
 
 /*? --- TODOS OS CODIGO SIMILARES - inicio --- */
 section{
@@ -155,7 +184,7 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     padding: 5px;
     transform: translateX(-50%); /* CENTRALIZA O TRACO*/
 }
-.about, .services, .skills, .teams, .contact{
+.about, .services, .skills, .teams, .contact, footer{
     font-family: 'Roboto', sans-serif;
 }
 .about .about-content,
@@ -407,8 +436,14 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
 /*todo --- SESSAO - EQUIPE - fim ---*/
 
 /*todo --- SESSAO - CONTATO - inicio ---*/
+.contact .title::after{
+    content: "Fale conosco";
+}
 .contact .contact-content .column{
     width: calc(50% - 30px); /* separa as duas colunas divs*/
+}
+.contact .contact-content{
+    align-items: flex-start; /* alinha as duas colunas no topo da div*/
 }
 .contact .contact-content .left p{
     text-align: justify; /* justifica os textos */
@@ -439,7 +474,77 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     font-size: 25px;
     color: #00804b;
 }
+.contact .right form .fields{
+    display: flex; /*coloca uma div do lado da outra*/
+}
+.contact .right form .field,
+.contact .right form .fields .field{
+    width: 100%;
+    height: 45px;
+    margin-bottom: 15px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+}
+.contact .right form .name{
+    margin-right: 10px;
+}
+.contact .right form .email{
+    margin-left: 10px;
+}
+.contact .right form .textarea{
+    width: 100%;
+    height: 80px;
+}
+.contact .right form .textarea textarea{
+    padding-top: 10px;
+    resize: none;
+}
+.contact .right form .button{
+    width: 170px;
+    height: 47px;
+}
+.contact .right form .button button{
+    width: 100%;
+    height: 100%;
+    border: 2px solid #00804b;
+    background: #00804b;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.contact .right form .button button:hover{
+    color: #00804b;
+    background: none;
+}
 /*todo --- SESSAO - CONTATO - fim ---*/
+
+/*todo --- SESSAO - FOOTER - inicio ---*/
+footer{
+    background: #111;
+    padding: 20px 23px;
+    color: #fff;
+    text-align: center;
+}
+footer span a{
+    color: #00804b;
+    text-decoration: none;
+}
+footer span a:hover{
+    text-decoration: underline;
+}
+/*todo --- SESSAO - FOOTER - fim ---*/
 
 /*! --- RESPONSIVO - inicio --- */
 @media (max-width: 1300px){
@@ -471,6 +576,8 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     .menu-btn{ /* icone hamburg*/
         display: block;
         z-index: 999;
+        /* top: 15px;
+        right: -15px; */
     }
     .menu-btn:hover{ /* icone hamburg hover*/
         color: #fff;
@@ -522,9 +629,13 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
-    .skills .skills-content .column{ /* redimensiona as colunas de especialidades*/
+    .skills .skills-content .column, /* redimensiona as colunas de especialidades*/
+    .contact .contact-content .column{
         width: 100%;
         margin-bottom: 35px;
+    }
+    footer{
+        margin-top: 15px; /* para o botao ENVIAR nao ficar colado no rodape*/
     }
 }
 @media (max-width: 690px){
@@ -561,3 +672,5 @@ section .title::after{ /* traco e "Quem sou eu" abaixo do SOBRE */
     /*todo --- BY GUST - fim --- */
 }
 /*! --- RESPONSIVO - fim --- */
+
+/**  OI OI OI*/
