aula14 - Listar Pagtos - extensao moment - conserto da linha para ler os dados do BD

--- a/cursosCelke/node/aula13/views/pagamento.handlebars
+++ b/cursosCelke/node/aula13/views/pagamento.handlebars
@@ -1,1 +1,8 @@
 <h1>LISTAR PAGAMENTO</h1>
+
+{{!-- pagtos vem do arquivo app.js --}}
+{{#each pagtos}}
+    Nome: {{nome}}<br>
+    Valor: {{valor}}<br>
+    Cadastrado: {{#formatDate createdAt}}{{/formatDate}} <br>
+{{/each}}
